Make TestSummary member fields private.