@@ -88,10 +88,10 @@ public class SuiteExecutionReport extends ExecutionReport {
       long runTimeInMillis = getRunTimeInMillisOrZeroIfNotPresent(refElement);
       PageHistoryReference r1 = new PageHistoryReference(name,time,runTimeInMillis);
       Element counts = XmlUtil.getElementByTagName(refElement,"counts");
-      r1.getTestSummary().right = new Integer(XmlUtil.getTextValue(counts,"right"));
-      r1.getTestSummary().wrong = new Integer(XmlUtil.getTextValue(counts,"wrong"));
-      r1.getTestSummary().ignores = new Integer(XmlUtil.getTextValue(counts,"ignores"));
-      r1.getTestSummary().exceptions = new Integer(XmlUtil.getTextValue(counts,"exceptions"));
+      r1.getTestSummary().setRight(Integer.valueOf(XmlUtil.getTextValue(counts, "right")));
+      r1.getTestSummary().setWrong(Integer.valueOf(XmlUtil.getTextValue(counts, "wrong")));
+      r1.getTestSummary().setIgnores(Integer.valueOf(XmlUtil.getTextValue(counts, "ignores")));
+      r1.getTestSummary().setExceptions(Integer.valueOf(XmlUtil.getTextValue(counts, "exceptions")));
       pageHistoryReferences.add(r1);
     }
   }
